@@ -8,6 +8,7 @@ MovieJukebox 1.0.16 beta
   - Enhancement  #418 Option to exclude files without external subtitles
   - Fixed defect #422 Encoding problems with link of accentuated categories or two words categories on Categories.html
   - Fixed defect #433 Local fanart not handled correctly for Unknown TV series
+  - Enhancement  #442 Added proxy support
 
 
 MovieJukebox 1.0.15 beta
